--- a/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,8 +1,11 @@
-<h2>{{hero.name | uppercase}} Details</h2>
-<div><span>id: </span>{{hero.id}}</div>
-<div><span>name: </span>{{hero.name}}</div>
-
-<div>
-    <label for="name">Hero name: </label>
-    <input type="text" id="name" placeholder="name" [(ngModel)]="hero.name">
-</div>
+<h2>My Heroes</h2>
+<ul class="heroes">
+    <li
+        *ngFor="let hero of heroes"
+        (click)="onSelect(hero)"
+        [class.selected]="hero == selectedHero"
+    >
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </li>
+    <app-hero-detail [hero]="selectedHero"></app-hero-detail>
+</ul>
