--- a/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/app.component.css
+++ b/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/app.component.css
@@ -5,7 +5,7 @@ h1 {
   nav a {
     padding: .5rem;
     text-decoration: none;
-    margin-top: 10px;
+    margin: 10px 2px;
     display: inline-block;
     background-color: #e8e8e8;
     color: #3d3d3d;
