--- a/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
@@ -5,4 +5,5 @@
         <label for="hero-name">Hero name: </label>
         <input id="hero-name" placeholder="name" [(ngModel)]="hero.name">
     </div>
+    <button (click)="goBack()">go back</button>
 </div>
