add fake in-mem server, and add CRUD requests

--- a/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
@@ -6,4 +6,5 @@
         <input id="hero-name" placeholder="name" [(ngModel)]="hero.name">
     </div>
     <button (click)="goBack()">go back</button>
+    <button (click)="save()">save</button>
 </div>
