--- a/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -2,8 +2,27 @@
 <ul class="heroes">
     <li *ngFor="let hero of heroes">
         <a routerLink="/detail/{{hero.id}}">
-            <span class="badge">{{hero.id}}</span> {{hero.name}}
+            <span class="badge">{{hero.id}}</span>
+            {{hero.name}}
         </a>
+        <button
+            class="delete"
+            title="delete hero"
+            (click)="delete(hero)">
+            x
+        </button>
     </li>
-    <app-hero-detail></app-hero-detail>
 </ul>
+<div>
+    <label for="new-hero">Hero name:</label>
+    <input
+        id="new-hero"
+        #heroName>
+
+    <!-- (click) passes input value to add() and then clears the input -->
+    <button
+        class="add-button"
+        (click)="add(heroName.value); heroName.value=''">
+        Add hero
+    </button>
+</div>
