add toolbar for header, and some styling for better alignements

--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/hero-search/hero-search.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/hero-search/hero-search.component.html
@@ -12,7 +12,7 @@
         <mat-option
             *ngFor="let hero of heroes$ | async"
             [value]="hero.name">
-            <span routerLink="/detail/{{hero.id}}">{{hero.name}}</span>
+            <a routerLink="/detail/{{hero.id}}">{{hero.name}}</a>
         </mat-option>
     </mat-autocomplete>
 </div>
