--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/heroes/heroes.component.scss
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/heroes/heroes.component.scss
@@ -1,33 +1,45 @@
 .heroes {
-    max-width: 500px;
-    margin: 1em;
-
     .header {
+        display: flex;
         margin-bottom: 2em;
+        flex-direction: row;
+        justify-content: space-between;
+
+
+        #add_hero {
+            text-align: end;
+        }
+    }
+
+    #heroes_list {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
     }
 
     button {
+        position:relative;
+        bottom: 8px;
         margin-left: 1em;
+        line-height: 3em;
     }
+
+    mat-card {
+        margin-bottom: 1em;
+        background-color: #EEE;
+        width: 175px;
+
+        mat-card-content {
+            margin: 0;
+        }
+        mat-card-actions {
+            padding: 0;
+        }
+    }
+
+    mat-card:hover {
+        background-color: rgb(245, 245, 245);
+    }
+
 }
 
-
-mat-card {
-    margin-bottom: 1em;
-    background-color: #EEE;
-    width: 200px;
-
-    mat-card-subtitle {
-        margin-bottom: 0;
-    }
-    mat-card-content {
-        margin: 0;
-    }
-    mat-card-actions {
-        padding: 0;
-    }
-}
-
-mat-card:hover {
-    background-color: rgb(245, 245, 245);
-}
