--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/app.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/app.component.html
@@ -1,7 +1,3 @@
-<h1>{{ title }}</h1>
-<div>
-    <button mat-raised-button color="primary" routerLink="/dashboard">Dashboard</button>
-    <button mat-raised-button color="primary" routerLink="/heroes">Heroes</button>
-</div>
+<app-header [title]=title></app-header>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
