--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
@@ -1,10 +1,28 @@
-<div *ngIf="hero">
-    <h2>{{hero.name | uppercase}} Details</h2>
-    <div><span>id: </span>{{hero.id}}</div>
-    <div>
-        <label for="hero-name">Hero name: </label>
-        <input id="hero-name" placeholder="name" [(ngModel)]="hero.name">
-    </div>
-    <button (click)="goBack()">go back</button>
-    <button (click)="save()">save</button>
+<div id="details">
+    <button
+        mat-stroked-button
+        (click)="goBack()">
+        go back
+    </button>
+    <mat-card
+        class="mat-elevation-z5"
+        *ngIf="hero">
+        <mat-card-title>{{hero.name | uppercase}} Details</mat-card-title>
+        <mat-card-subtitle>
+            id: {{hero.id}}
+        </mat-card-subtitle>
+        <mat-card-content>
+            <mat-form-field appearance="fill">
+                <mat-label for="hero-name">Hero name</mat-label>
+                <input
+                    matInput
+                    id="hero-name"
+                    placeholder="name"
+                    [(ngModel)]="hero.name">
+            </mat-form-field>
+        </mat-card-content>
+        <mat-card-actions align="end">
+            <button mat-stroked-button (click)="save()">save</button>
+        </mat-card-actions>
+    </mat-card>
 </div>
