--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/styles.css
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/styles.css
@@ -11,7 +11,7 @@ h2, h3 {
   font-weight: lighter;
 }
 body {
-  margin: 2em;
+  padding: 2em;
 }
 body, input[type="text"], button {
   color: #333;
@@ -20,6 +20,7 @@ body, input[type="text"], button {
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
 }
-html, body { height: 100%; }
+html, body { height: 100%; max-width: 750px }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
