add router for autocomplete

--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/hero-search/hero-search.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/hero-search/hero-search.component.html
@@ -11,8 +11,9 @@
     <mat-autocomplete #search_auto>
         <mat-option
             *ngFor="let hero of heroes$ | async"
+            (onSelectionChange)="goTo('/detail/' + hero.id)"
             [value]="hero.name">
-            <a routerLink="/detail/{{hero.id}}">{{hero.name}}</a>
+                {{hero.name}}
         </mat-option>
     </mat-autocomplete>
 </div>
