--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/dashboard/dashboard.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="heroes-menu">
-  <app-hero-search></app-hero-search>
+  <div id="search" style="text-align: center;">
+    <app-hero-search></app-hero-search>
+  </div>
   <h2>Top Heroes</h2>
   <mat-grid-list cols="2" rowHeight="150px">
     <mat-grid-tile *ngFor="let hero of heroes"
