--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/heroes/heroes.component.scss
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/heroes/heroes.component.scss
@@ -1,3 +1,4 @@
+
 .heroes {
     .header {
         display: flex;
@@ -17,28 +18,24 @@
         justify-content: space-between;
     }
 
-    button {
+    button.add-button {
         position:relative;
-        bottom: 8px;
-        margin-left: 1em;
-        line-height: 3em;
+        bottom: 10px;
+        margin: 1em;
     }
 
     mat-card {
         margin-bottom: 1em;
-        background-color: #EEE;
         width: 175px;
 
-        mat-card-content {
-            margin: 0;
+        button {
+            margin-left: 1em;
         }
-        mat-card-actions {
-            padding: 0;
-        }
+
     }
 
     mat-card:hover {
-        background-color: rgb(245, 245, 245);
+        background-color: rgb(250, 250, 250);
     }
 
 }
