add dark theme, restore services files and fix init tests

--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/app.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/app.component.html
@@ -1,3 +1,10 @@
-<app-header [title]=title></app-header>
-<router-outlet></router-outlet>
-<app-messages></app-messages>
+<div class="wrapper">
+    <app-header
+        [title]="title"
+        (toggleDarkMode)="onToggleTheme($event)">
+    </app-header>
+    <router-outlet></router-outlet>
+    <div class="messages-row">
+        <app-messages ></app-messages>
+    </div>
+</div>
