--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/core/components/header/header.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/core/components/header/header.component.html
@@ -1,11 +1,25 @@
-<mat-toolbar>
-    <mat-toolbar-row>
-        <h1>{{ title }}</h1>
-    </mat-toolbar-row>
-    <mat-toolbar-row>
-        <nav>
-            <button mat-raised-button color="primary" routerLink="/dashboard">Dashboard</button>
-            <button mat-raised-button color="primary" routerLink="/heroes">Heroes</button>
-        </nav>
-    </mat-toolbar-row>
-</mat-toolbar>
+<div id="header">
+    <mat-toolbar>
+        <mat-toolbar-row>
+            <h1>{{ title }}</h1>
+            <div class="spacer"></div>
+            <mat-slide-toggle [formControl]="toggleControl"></mat-slide-toggle>
+        </mat-toolbar-row>
+        <mat-toolbar-row>
+            <nav>
+                <button
+                    mat-raised-button
+                    color="primary"
+                    routerLink="/dashboard">
+                    Dashboard
+                </button>
+                <button
+                    mat-raised-button
+                    color="primary"
+                    routerLink="/heroes">
+                    Heroes
+                </button>
+            </nav>
+        </mat-toolbar-row>
+    </mat-toolbar>
+</div>
