--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/modules/heroes-overview/pages/dashboard/dashboard.component.scss
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/modules/heroes-overview/pages/dashboard/dashboard.component.scss
@@ -1,12 +1,4 @@
 .heroes-menu {
-    mat-grid-tile {
-        background-color: rgb(152, 139, 204);
-        color: white;
-    }
-    mat-grid-tile:hover {
-        background-color: rgb(162, 149, 204);
-        cursor: pointer;
-    }
-
+    padding: 1rem;
 }
 
