--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/modules/heroes-overview/pages/heroes/heroes.component.html
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/app/modules/heroes-overview/pages/heroes/heroes.component.html
@@ -2,7 +2,7 @@
     <div class="header">
         <h2>My Heroes</h2>
         <div id="add_hero">
-            <button mat-fab color="primary"
+            <button mat-fab color="accent"
                 title="add hero"
                 class="add-button mat-elevation-z3"
                 routerLink="/add">
