--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/styles/styles.scss
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/src/styles/styles.scss
@@ -1,31 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
 /* Application-wide Styles */
+.wrapper {
+  max-width: 75%;
+  margin: auto;
+}
+
+h1, h2, h3 {
+  font-family: Arial, Helvetica, sans-serif
+}
 
 h1 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
+    font-size: 250% !important;
   }
+
+h2 {
+  font-size: 150% !important;
+}
+
 h2, h3 {
-  color: #444;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
-body {
-  padding: 2em;
-}
+
 body, input[type="text"], button {
-  color: #333;
   font-family: Cambria, Georgia, serif;
 }
 
 button:hover {
   opacity: 90%;
 }
+
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
-html, body { height: 100%; max-width: 750px }
+html, body { height: 100%;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
